<resources>
    <string name="app_name">Meetups</string>
    <string name="sign_in_activity_1">Napravi nalog</string>
    <string name="app_name_lowercase">meetups</string>
    <string name="welcome">Dobrodošli!</string>
    <string name="sign_in_activity_2">Prijavi se sa Google-om</string>
    <string name="sign_in_activity_3">Prijavi se sa Meetups nalogom</string>
    <string name="email">Email</string>
    <string name="password">Lozinka</string>
    <string name="sign_in_activity_4">Prijava</string>
    <string name="error">Greska</string>
    <string name="google_play_error">Ovaj uređaj nije kompatibilan sa Google Play servisima koji su neophodni da bi aplikacija radila.</string>
    <string name="sign_in_activity_5">Polja email i lozinka su prazna</string>
    <string name="sign_in_activity_6">Email adresa koju ste uneli nije ispravna</string>
    <string name="action_sign_out">Odjavi se</string>
    <string name="action_search">Pretraga korisnika</string>
    <string name="no_results_found">Nije pronadjen nijedan korisnik.</string>
    <string name="fragment_groups_no_groups">Trenutno nemate nijednu grupu.</string>
    <string name="item_group_num_members">"Broj članova: %1$d"</string>
    <string name="fragment_group_info_meetings_progress">"%d sastanka u toku"</string>
    <string name="fragment_group_info_next_meeting">Sledeći sastanak</string>
    <string-array name="days_of_week">
        <item>Ponedeljak</item>
        <item>Utorak</item>
        <item>Sreda</item>
        <item>Četvrtak</item>
        <item>Petak</item>
        <item>Subota</item>
        <item>Nedelja</item>
    </string-array>
    <string-array name="response_choices">
        <item>Prisustvujem</item>
        <item>Ne prisustvujem</item>
    </string-array>
    <string name="cancel">Otkaži</string>
</resources>
